--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "modo-navigationbar",
-  "version": "1.0.2",
+  "name": "modo-mask",
+  "version": "1.0.0",
   "description": "",
   "main": "miniprogram_dist/index.js",
   "scripts": {
@@ -58,6 +58,10 @@
     "j-component": "git+https://github.com/JuneAndGreen/j-component.git",
     "jest": "^23.5.0",
     "through2": "^2.0.3",
+    "ts-loader": "^5.3.0",
+    "tslint": "^5.11.0",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.1.6",
     "webpack": "^4.16.5",
     "webpack-node-externals": "^1.7.2"
   },
