--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -27,9 +27,10 @@
       "src"
     ]
   },
+  "homepage": "https://github.com/modojs/wxapp-ui",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/modojs/wxapp-ui/tree/master/packages/mask"
   },
   "author": "akiq",
   "license": "MIT",
