--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "scripts": {
     "format": "prettier --trailing-comma es5 --single-quote --write 'packages/**/*.js'",
-    "add": "chmod +x ./addpkg.sh && ./addpkg.sh"
+    "add": "chmod +x ./addpkg.sh && ./addpkg.sh",
+    "prepush": "chmod +x ./prepush.sh && ./prepush.sh"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.2.0",
     "@commitlint/config-conventional": "^7.1.2",
-    "husky": "^1.1.2",
+    "husky": "^1.2.1",
     "lerna": "^3.4.3",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
