--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "format": "prettier --trailing-comma es5 --single-quote --write 'packages/**/*.js'",
     "add": "sh ./addpkg.sh",
-    "prepush": "chmod +x ./prepush.sh && ./prepush.sh"
+    "prepush": "sh ./prepush.sh"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.2.0",
