--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "format": "prettier --trailing-comma es5 --single-quote --write 'packages/**/*.js'",
-    "add": "chmod +x ./addpkg.sh && ./addpkg.sh",
+    "add": "bash ./addpkg.sh",
     "prepush": "chmod +x ./prepush.sh && ./prepush.sh"
   },
   "devDependencies": {
