--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -10,7 +10,7 @@
     "dist": "npm run build",
     "clean-dev": "gulp clean --develop",
     "clean": "gulp clean",
-    "test": "jest ./test/* --silent --bail",
+    "test": "jest ./test/* --bail",
     "coverage": "jest ./test/* --coverage --bail",
     "lint": "eslint \"src/**/*.js\"",
     "lint-tools": "eslint \"tools/**/*.js\" --rule \"import/no-extraneous-dependencies: false\""
@@ -27,43 +27,39 @@
       "src"
     ]
   },
-  "homepage": "https://github.com/modojs/wxapp-ui",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/modojs/wxapp-ui/tree/master/packages/mask"
-  },
+  "repository": "https://github.com/modojs/wxapp-ui/tree/master/packages/mask",
   "author": "akiq",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^9.0.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-env": "^1.7.0",
     "colors": "^1.3.1",
-    "eslint": "^5.3.0",
+    "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "13.1.0",
-    "eslint-loader": "^2.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "gulp": "^4.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-if": "^2.0.2",
     "gulp-install": "^1.1.0",
-    "gulp-less": "^3.5.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.4",
-    "j-component": "git+https://github.com/JuneAndGreen/j-component.git",
+    "gulp-sourcemaps": "^2.6.5",
     "jest": "^23.5.0",
+    "miniprogram-simulate": "^1.0.0",
     "through2": "^2.0.3",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
     "tslint-loader": "^3.5.4",
     "typescript": "^3.1.6",
-    "webpack": "^4.16.5",
+    "vinyl": "^2.2.0",
+    "webpack": "^4.29.5",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {},
@@ -71,5 +67,6 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "homepage": "https://github.com/modojs/wxapp-ui"
 }
