--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -31,36 +31,13 @@
   "author": "akiq",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^9.0.1",
     "babel-core": "^6.26.3",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^7.1.5",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-env": "^1.7.0",
-    "colors": "^1.3.1",
-    "eslint": "^5.14.1",
-    "eslint-config-airbnb-base": "13.1.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "gulp": "^4.0.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-if": "^2.0.2",
-    "gulp-install": "^1.1.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "jest": "^23.5.0",
-    "miniprogram-simulate": "^1.0.0",
-    "through2": "^2.0.3",
-    "ts-loader": "^5.3.0",
-    "tslint": "^5.11.0",
-    "tslint-loader": "^3.5.4",
-    "typescript": "^3.1.6",
-    "vinyl": "^2.2.0",
-    "webpack": "^4.29.5",
-    "webpack-node-externals": "^1.7.2"
+    "babel-preset-typescript": "^7.0.0-alpha.19",
+    "jest": "^23.5.0"
   },
   "dependencies": {},
   "browserslist": [
