--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -4,23 +4,25 @@
   "description": "",
   "main": "miniprogram_dist/index.js",
   "scripts": {
-    "dev": "gulp dev --develop",
-    "watch": "gulp watch --develop --watch",
-    "build": "gulp",
-    "dist": "npm run build",
-    "clean-dev": "gulp clean --develop",
-    "clean": "gulp clean",
+    "dev": "gulp dev --develop --cwd $PWD",
+    "watch": "gulp watch --develop --watch --cwd $PWD",
+    "build": "gulp --cwd $PWD",
+    "clean-dev": "gulp clean --develop --cwd $PWD",
+    "clean": "gulp clean --cwd $PWD",
     "test": "jest ./test/* --bail",
     "coverage": "jest ./test/* --coverage --bail",
     "lint": "eslint \"src/**/*.js\"",
-    "lint-tools": "eslint \"tools/**/*.js\" --rule \"import/no-extraneous-dependencies: false\""
+    "lint-demo": "eslint \"demo/**/*.js\" --rule \"import/no-extraneous-dependencies: false\""
   },
   "miniprogram": "miniprogram_dist",
   "jest": {
     "testEnvironment": "jsdom",
     "testURL": "https://jest.test",
     "collectCoverageFrom": [
-      "src/**/*.js"
+      "src/**/*.{js,ts}"
+    ],
+    "moduleFileExtensions": [
+      "js", "ts", "json", "jsx", "tsx", "node"
     ],
     "moduleDirectories": [
       "node_modules",
@@ -31,15 +33,18 @@
   "author": "akiq",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-typescript": "^7.0.0",
     "babel-jest": "^24.7.1",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-typescript": "^7.0.0-alpha.19",
-    "jest": "^23.5.0"
+    "jest": "^24.7.1",
+    "gulp": "^4.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@babel/runtime": "^7.4.4"
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
