--- a/package.json
+++ b/package.json
@@ -4,40 +4,45 @@
   "scripts": {
     "format": "prettier --trailing-comma es5 --single-quote --write 'packages/**/*.js'",
     "add": "sh ./addpkg.sh",
-    "prepush": "sh ./prepush.sh"
+    "prepush": "sh ./prepush.sh",
+    "genpreview": "sh ./genLib.sh"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.2.0",
     "@commitlint/config-conventional": "^7.1.2",
-    "husky": "^1.2.1",
-    "lerna": "^3.4.3",
-    "lint-staged": "^7.3.0",
-    "prettier": "^1.14.3",
-    "standard-version": "^4.4.0",
-    "colors": "^1.3.1",
-    "gulp-clean": "^0.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-postcss": "^8.0.0",
     "autoprefixer": "^9.0.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-if": "^2.0.2",
-    "gulp-install": "^1.1.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "webpack": "^4.29.5",
-    "webpack-node-externals": "^1.7.2",
-    "through2": "^2.0.3",
-    "vinyl": "^2.2.0",
-    "miniprogram-simulate": "^1.0.0",
+    "colors": "^1.3.1",
+    "del": "^4.1.1",
     "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-if": "^2.0.2",
+    "gulp-install": "^1.1.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-typescript": "^5.0.1",
+    "husky": "^1.2.1",
+    "lerna": "^3.4.3",
+    "lint-staged": "^7.3.0",
+    "miniprogram-simulate": "^1.0.0",
+    "prettier": "^1.14.3",
+    "standard-version": "^4.4.0",
+    "through2": "^2.0.3",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
     "tslint-loader": "^3.5.4",
-    "typescript": "^3.1.6"
+    "typescript": "^3.1.6",
+    "vinyl": "^2.2.0",
+    "webpack": "^4.29.5",
+    "webpack-node-externals": "^1.7.2"
   },
   "lint-staged": {
     "*.js": [
