--- a/packages/navigationBar/demo/app.json
+++ b/packages/navigationBar/demo/app.json
@@ -1,7 +1,7 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/index2/index"
+    "pages/index2/index2"
   ],
   "window":{
     "navigationStyle": "custom",
