--- a/packages/steps/package.json
+++ b/packages/steps/package.json
@@ -4,23 +4,25 @@
   "description": "",
   "main": "miniprogram_dist/index.js",
   "scripts": {
-    "dev": "gulp dev --develop",
-    "watch": "gulp watch --develop --watch",
-    "build": "gulp",
-    "dist": "npm run build",
-    "clean-dev": "gulp clean --develop",
-    "clean": "gulp clean",
-    "test": "jest ./test/* --silent --bail",
+    "dev": "gulp dev --develop --cwd $PWD",
+    "watch": "gulp watch --develop --watch --cwd $PWD",
+    "build": "gulp --cwd $PWD",
+    "clean-dev": "gulp clean --develop --cwd $PWD",
+    "clean": "gulp clean --cwd $PWD",
+    "test": "jest ./test/* --bail",
     "coverage": "jest ./test/* --coverage --bail",
     "lint": "eslint \"src/**/*.js\"",
-    "lint-tools": "eslint \"tools/**/*.js\" --rule \"import/no-extraneous-dependencies: false\""
+    "lint-demo": "eslint \"demo/**/*.js\" --rule \"import/no-extraneous-dependencies: false\""
   },
   "miniprogram": "miniprogram_dist",
   "jest": {
     "testEnvironment": "jsdom",
     "testURL": "https://jest.test",
     "collectCoverageFrom": [
-      "src/**/*.js"
+      "src/**/*.{js,ts}"
+    ],
+    "moduleFileExtensions": [
+      "js", "ts", "json", "jsx", "tsx", "node"
     ],
     "moduleDirectories": [
       "node_modules",
@@ -31,38 +33,18 @@
   "author": "akiq",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^9.0.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "babel-preset-env": "^1.7.0",
-    "colors": "^1.3.1",
-    "eslint": "^5.14.1",
-    "eslint-config-airbnb-base": "13.1.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "gulp": "^4.0.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-if": "^2.0.2",
-    "gulp-install": "^1.1.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "jest": "^23.5.0",
-    "miniprogram-simulate": "^1.0.0",
-    "through2": "^2.0.3",
-    "ts-loader": "^5.3.0",
-    "tslint": "^5.11.0",
-    "tslint-loader": "^3.5.4",
-    "typescript": "^3.1.6",
-    "vinyl": "^2.2.0",
-    "webpack": "^4.29.5",
-    "webpack-node-externals": "^1.7.2"
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-typescript": "^7.0.0",
+    "babel-jest": "^24.7.1",
+    "jest": "^24.7.1",
+    "gulp": "^4.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@babel/runtime": "^7.4.4"
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
