--- a/.huskyrc
+++ b/.huskyrc
@@ -1,7 +1,6 @@
 {
   "hooks": {
     "pre-commit": "lint-staged",
-    "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-    "pre-push": "npm run prepush"
+    "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
   }
 }
