--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lint-staged": "^7.3.0",
     "miniprogram-simulate": "^1.0.0",
     "prettier": "^1.14.3",
+    "sass": "^1.20.1",
     "standard-version": "^4.4.0",
     "through2": "^2.0.3",
     "ts-loader": "^5.3.0",
