chore: update pkgs sass

--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -22,7 +22,12 @@
       "src/**/*.{js,ts}"
     ],
     "moduleFileExtensions": [
-      "js", "ts", "json", "jsx", "tsx", "node"
+      "js",
+      "ts",
+      "json",
+      "jsx",
+      "tsx",
+      "node"
     ],
     "moduleDirectories": [
       "node_modules",
