--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@commitlint/cli": "^7.2.0",
     "@commitlint/config-conventional": "^7.1.2",
     "autoprefixer": "^9.0.1",
+    "babel-loader": "^8.0.5",
     "colors": "^1.3.1",
     "del": "^4.1.1",
     "eslint": "^5.14.1",
